# grad_proj

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  main.cc  motor.cc  motor.h
cmd_app/: CMakeLists.txt  main.cc  menu.cc  menu.h
examples/: CMakeLists.txt  example0_basic.cc  example1_basic.c
lib/: CMakeLists.txt  carray.c  carray.h  cmotor.c  cmotor.h  motor.cc  motor.h  test  test.c
web_app/: CMakeLists.txt  Makefile  app.cc  app.h  config.js  content.h  main.cc  page.tmpl
